copy and pasted sqlfunc.py

--- a/WeatherDataEu.ipynb
+++ b/WeatherDataEu.ipynb
@@ -2,48 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
     "import csv\n",
-    "import os"
+    "import os\n",
+    "import sql_functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = psycopg2.connect('dbname = weatherdata user=postgres')\n",
-    "with conn:\n",
-    "    with conn.cursor() as cur:\n",
-    "        for file in os.listdir('/Users/leontiosorfanos/Desktop/SqlProjects/WeatherData/ECA_blend_tg'):\n",
-    "            if file not in {'stations.txt', 'sources.txt', 'elements.txt'}:\n",
-    "                cur.execute(f'''create table if not exists eca_blend_tg (staid integer, souid integer, date date, tg integer, q_tg integer check( q_tg in (0, 1, 9)))\n",
-    "                            ;\n",
-    "                        \n",
-    "                        copy eca_blend_tg (staid, souid, date, tg, q_tg)\n",
-    "                        from program 'tail -q -n +22 /Users/leontiosorfanos/Desktop/SqlProjects/WeatherData/ECA_blend_tg/{file}'\n",
-    "                        delimiter ',' ''')\n",
-    "        "
+    "directory = '/media/leontioso/data2/WeatherData/' \n",
+    "code_set = set()\n",
+    "folders = next(os.walk(directory))[1]\n",
+    "for folder in folders:\n",
+    "    weather_variable_code = folder[-2:]\n",
+    "    code_set.add(weather_variable_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn.rollback()"
+    "sql_functions.create_populate_sources(code_set)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_functions.create_populate_stations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_functions.create_populate_elements()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql_functions.create_populate_sources(code_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -57,12 +86,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "86c6455a3744ed69cd61e517536736e26960f898258ecc323a7ac9519882daa4"
+    "hash": "3648867ea5c5000c659bc74fb749be396bbee54dca8953c4f1eceb0ed452ec8a"
    }
   }
  },
