Modified presendation refinement of answers 1 and 2

--- a/WeatherDataEu.ipynb
+++ b/WeatherDataEu.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
     "import csv\n",
     "import os\n",
-    "import sql_functions"
+    "import sql_functions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = '/media/leontioso/data2/WeatherData/' \n",
+    "directory = '/home/leontioso/Desktop/WeatherData' \n",
     "code_set = set()\n",
     "folders = next(os.walk(directory))[1]\n",
     "for folder in folders:\n",
@@ -32,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql_functions.create_populate_sources(code_set)"
+    "for code in code_set:\n",
+    "    sql_functions.create_populate_eca_table(code)"
    ]
   },
   {
@@ -60,6 +61,34 @@
    "outputs": [],
    "source": [
     "sql_functions.create_populate_sources(code_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eca_table_tg updated\n",
+      "Eca_table_tx updated\n",
+      "Eca_table_rr updated\n",
+      "Eca_table_sd updated\n",
+      "Eca_table_dd updated\n",
+      "Eca_table_ss updated\n",
+      "Eca_table_pp updated\n",
+      "Eca_table_qq updated\n",
+      "Eca_table_tn updated\n",
+      "Eca_table_hu updated\n",
+      "Eca_table_fg updated\n",
+      "Eca_table_cc updated\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql_functions.update_eca_tables_withnull(code_set)"
    ]
   },
   {
