Final functions multithreading. Partial func used also

--- a/WeatherDataEu.ipynb
+++ b/WeatherDataEu.ipynb
@@ -9,7 +9,8 @@
     "import psycopg2\n",
     "import csv\n",
     "import os\n",
-    "import sql_functions\n"
+    "import sql_functions\n",
+    "import concurrent.futures\n"
    ]
   },
   {
@@ -18,12 +19,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = '/home/leontioso/Desktop/WeatherData' \n",
+    "directory = '/home/leontioso/Desktop/WeatherData/csv_files' \n",
     "code_set = set()\n",
-    "folders = next(os.walk(directory))[1]\n",
-    "for folder in folders:\n",
-    "    weather_variable_code = folder[-2:]\n",
-    "    code_set.add(weather_variable_code)"
+    "files = os.listdir(directory)\n",
+    "for file in files:\n",
+    "    if file.startswith('ECA'):\n",
+    "        weather_variable_code = file[10:12]\n",
+    "        code_set.add(weather_variable_code)\n"
    ]
   },
   {
@@ -32,8 +34,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for code in code_set:\n",
-    "    sql_functions.create_populate_eca_table(code)"
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "    results = executor.map(sql_functions.create_populate_eca_table, code_set)\n",
+    "    for result in results:\n",
+    "        print(result)"
    ]
   },
   {
@@ -56,9 +60,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eca_blend_dd combined\n",
+      "eca_blend_fg combined\n",
+      "eca_blend_hu combined\n",
+      "eca_blend_sd combined\n",
+      "eca_blend_qq combined\n",
+      "eca_blend_rr combined\n",
+      "eca_blend_cc combined\n",
+      "eca_blend_pp combined\n",
+      "eca_blend_tg combined\n",
+      "eca_blend_ss combined\n",
+      "eca_blend_fx combined\n",
+      "eca_blend_tx combined\n",
+      "eca_blend_tn combined\n"
+     ]
+    }
+   ],
    "source": [
     "sql_functions.create_populate_sources(code_set)"
    ]
@@ -72,23 +96,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eca_table_tg updated\n",
-      "Eca_table_tx updated\n",
-      "Eca_table_rr updated\n",
-      "Eca_table_sd updated\n",
+      "Eca_table_fx updated\n",
       "Eca_table_dd updated\n",
-      "Eca_table_ss updated\n",
-      "Eca_table_pp updated\n",
       "Eca_table_qq updated\n",
-      "Eca_table_tn updated\n",
+      "Eca_table_pp updated\n",
+      "Eca_table_ss updated\n",
       "Eca_table_hu updated\n",
+      "Eca_table_cc updated\n",
       "Eca_table_fg updated\n",
-      "Eca_table_cc updated\n"
+      "Eca_table_tg updated\n",
+      "Eca_table_tn updated\n",
+      "Eca_table_tx updated\n",
+      "Eca_table_sd updated\n",
+      "Eca_table_rr updated\n"
      ]
     }
    ],
    "source": [
-    "sql_functions.update_eca_tables_withnull(code_set)"
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "    results = executor.map(sql_functions.update_eca_tables_withnull, code_set)\n"
    ]
   },
   {
